Archive2/44/d34b5f38539c3f/output
main.cpp: In function 'int main()':
main.cpp:7:18: error: 'std::locale::glouuuuuuuuustd' has not been declared
     std::locale::glouuuuuuuuustd::locale("ja_JP.utf8"));
                  ^
main.cpp:7:55: error: expected ';' before ')' token
     std::locale::glouuuuuuuuustd::locale("ja_JP.utf8"));
                                                       ^
